# test-collatz-conjecture-with-yarp-Arya07

./: .gitignore
code/: CMakeLists.txt  compile.sh
code/client/: CMakeLists.txt  compile_client.sh
code/client/include/: CollatzTester.hpp
code/client/src/: ClientModule.cpp  CollatzTester.cpp
code/server/: CMakeLists.txt  compile_server.sh
code/server/include/: FIFOController.hpp  FIFOHandler.hpp  ServerModule.hpp
code/server/src/: FIFOHandler.cpp  ServerModule.cpp
